--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<html>
-<h2>My LOvely Page</h2>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <p>This is to demonstrate clone</p>
+  </body>
 </html>
